Bug 51196: Fix the appearance of wrapped text in navbar
Now, when the screen is too narrow (or the text is too long)
to display the navigation bar in a single line, the "next"
chapterlink drops into a second line and remains right-aligned.

--- a/modules/ext.BookManagerv2.css
+++ b/modules/ext.BookManagerv2.css
@@ -43,14 +43,17 @@ a.mw-bookmanagerv2-nav-icon, a.mw-bookmanagerv2-nav-icon img {
 	cursor: pointer;
 }
 a.mw-bookmanagerv2-nav-icon {
+	float: left;
 	margin: 0 10px;
 }
 a.mw-bookmanagerv2-nav-prev {
+	float: left;
 	margin-right: 10px;
 	background: transparent url('../images/Angle_left_font_awesome.png') no-repeat left center;
 	padding-left: 25px;
 }
 a.mw-bookmanagerv2-nav-next {
+	float: right;
 	margin-left: 10px;
 	background: transparent url('../images/Angle_right_font_awesome.png') no-repeat right center;
 	padding-right: 25px;
